enhanced docker compose file

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,54 +1,85 @@
+# Docker Compose for 42 Inception Project
 version: '3.8'
+
 services:
   nginx:
     build: ./requirements/nginx
+    container_name: nginx
     ports:
       - "443:443"
+    volumes:
+      - wp_data:/var/www/html
     networks:
-      - backend
-    restart:
-      unless-stopped
+      - inception_network
     depends_on:
       - wordpress
+    restart: unless-stopped
 
-  mariadb:
-    build: ./requirements/mariadb
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD_FILE: /run/secrets/db_password
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
-    secrets:
-      - db_password
-      - db_root_password
-    networks:
-      - backend
-    restart:
-      unless-stopped
   wordpress:
     build: ./requirements/wordpress
+    container_name: wordpress
+    volumes:
+      - wp_data:/var/www/html
+    networks:
+      - inception_network
     depends_on:
       - mariadb
-    networks:
-      - backend
-    restart:
-      unless-stopped
     environment:
+      DOMAIN_NAME: ${DOMAIN_NAME}
+      WORDPRESS_DB_HOST: mariadb:3306
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
       WORDPRESS_DB_USER: ${MYSQL_USER}
       WORDPRESS_DB_PASSWORD_FILE: /run/secrets/db_password
-      WORDPRESS_DB_HOST: mariadb:3306
+      WP_ADMIN_USER: ${WP_ADMIN_USER}
+      WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
+      WP_USER: ${WP_USER}
+      WP_USER_EMAIL: ${WP_USER_EMAIL}
+    secrets:
+      - db_password
+      - wp_admin_password
+      - wp_user_password
+    restart: unless-stopped
+
+  mariadb:
+    build: ./requirements/mariadb
+    container_name: mariadb
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - inception_network
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+    secrets:
+      - db_password
+      - db_root_password
+    restart: unless-stopped
 
 volumes:
+  wp_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/${USER}/data/wp
+
   db_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/${USER}/data/db
 
 secrets:
   db_password:
     file: ../secrets/db_password.txt
   db_root_password:
     file: ../secrets/db_root_password.txt
+  wp_admin_password:
+    file: ../secrets/wp_admin_password.txt
+  wp_user_password:
+    file: ../secrets/wp_user_password.txt
 
 networks:
-  backend:
+  inception_network:
+    driver: bridge
