add variable to .env file

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,19 @@
+# .env file for 42 Inception Project
+
+# Domain Configuration
 DOMAIN_NAME=meferraz.42.fr
+
+# User Configuration
+USER=meferraz
+
+# MySQL/MariaDB Configuration
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wp_user
+
+# WordPress Admin User Configuration
+WP_ADMIN_USER=meferraz_admin
+WP_ADMIN_EMAIL=meferraz@student.42porto.pt
+
+# WordPress Regular User Configuration
+WP_USER=wp_editor
+WP_USER_EMAIL=editor@meferraz.42.fr
