add mariadb dockerfile

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,19 +1,36 @@
-# Based on the official MariaDB Docker image
-FROM debian:bullseye
+# 42 Inception - MariaDB Dockerfile
+FROM alpine:3.21
 
-# Install required packages
-RUN apt-get update && \
-	apt-get install -y mariadb-server && \
-	rm -rf /var/lib/apt/lists/*
+# Install MariaDB and related packages
+RUN apk add --no-cache \
+	mariadb \
+	mariadb-client \
+	mariadb-server-utils \
+	openrc \
+	&& mkdir -p /run/mysqld \
+	&& chown -R mysql:mysql /run/mysqld
 
-# Copy the initialization scripts into the container
-COPY ./initdb.d/ /docker-entrypoint-initdb.d/
+# Copy MariaDB configuration
+COPY conf/my.cnf /etc/my.cnf.d/mariadb-server.cnf
+COPY tools/init-db.sh /docker-entrypoint-initdb.d/init-db.sh
 
-# Expose the default MariaDB port
+# Set proper permissions
+RUN chmod +x /docker-entrypoint-initdb.d/init-db.sh
+
+# Create directories and set permissions
+RUN mkdir -p /var/lib/mysql /run/mysqld \
+	&& chown -R mysql:mysql /var/lib/mysql /run/mysqld \
+	&& chmod 755 /var/lib/mysql /run/mysqld
+
+# Copy startup script
+COPY tools/mariadb-start.sh /usr/local/bin/mariadb-start.sh
+RUN chmod +x /usr/local/bin/mariadb-start.sh
+
+# Expose MariaDB port
 EXPOSE 3306
 
-# Set the volume for persistent data storage
-VOLUME ["/var/lib/mysql"]
+# Switch to mysql user
+USER mysql
 
 # Start MariaDB
-CMD ["mysqld"]
+CMD ["/usr/local/bin/mariadb-start.sh"]
