--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,4 +1,3 @@
-# MariaDB Configuration for 42 Inception
 [mysqld]
 user = mysql
 pid-file = /run/mysqld/mysqld.pid
@@ -9,15 +8,15 @@ datadir = /var/lib/mysql
 tmpdir = /tmp
 lc-messages-dir = /usr/share/mysql
 
-# Network settings
+# Network
 bind-address = 0.0.0.0
 skip-networking = 0
 
-# General settings
+# Charset
 character-set-server = utf8mb4
 collation-server = utf8mb4_general_ci
 
-# MyISAM settings
+# MyISAM
 key_buffer_size = 16M
 max_allowed_packet = 16M
 table_open_cache = 64
@@ -27,7 +26,7 @@ read_buffer_size = 256K
 read_rnd_buffer_size = 512K
 myisam_sort_buffer_size = 8M
 
-# InnoDB settings
+# InnoDB
 innodb_buffer_pool_size = 128M
 innodb_log_file_size = 64M
 innodb_file_per_table = 1
