--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,3 @@
-# NGINX Configuration for 42 Inception
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -26,14 +25,17 @@ http {
 
 	# SSL Configuration
 	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+	ssl_prefer_server_ciphers off;
+	ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+	ssl_session_timeout 1d;
+	ssl_session_cache shared:MozTLS:10m;
+	ssl_session_tickets off;
 
 	server {
 		listen 443 ssl;
 		listen [::]:443 ssl;
 
-		server_name meferraz.42.fr;
+		server_name ${DOMAIN_NAME};
 
 		# SSL Certificate Configuration
 		ssl_certificate /etc/nginx/ssl/inception.crt;
@@ -44,9 +46,11 @@ http {
 		index index.php index.html index.htm;
 
 		# Security headers
+		add_header Strict-Transport-Security "max-age=63072000" always;
 		add_header X-Frame-Options "SAMEORIGIN" always;
 		add_header X-Content-Type-Options "nosniff" always;
 		add_header X-XSS-Protection "1; mode=block" always;
+		add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
 		# Handle WordPress permalinks
 		location / {
