--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,45 +1,23 @@
 [mysqld]
-user = mysql
-pid-file = /run/mysqld/mysqld.pid
-socket = /run/mysqld/mysqld.sock
-port = 3306
-basedir = /usr
-datadir = /var/lib/mysql
-tmpdir = /tmp
-lc-messages-dir = /usr/share/mysql
+# Basic server settings
+user            = mysql
+pid-file        = /run/mysqld/mysqld.pid
+socket          = /run/mysqld/mysqld.sock
+port            = 3306
+datadir         = /var/lib/mysql
 
-# Network
-bind-address = 0.0.0.0
-skip-networking = 0
+# Listen on all interfaces (needed for Docker)
+bind-address    = 0.0.0.0
 
-# Charset
+# Character set for full Unicode support
 character-set-server = utf8mb4
-collation-server = utf8mb4_general_ci
+collation-server     = utf8mb4_general_ci
 
-# MyISAM
-key_buffer_size = 16M
-max_allowed_packet = 16M
-table_open_cache = 64
-sort_buffer_size = 512K
-net_buffer_length = 16K
-read_buffer_size = 256K
-read_rnd_buffer_size = 512K
-myisam_sort_buffer_size = 8M
+# Logging (helpful for debugging)
+log-error       = /var/log/mysql/error.log
 
-# InnoDB
-innodb_buffer_pool_size = 128M
-innodb_log_file_size = 64M
-innodb_file_per_table = 1
-innodb_flush_log_at_trx_commit = 1
-
-# Logging
-log-error = /var/log/mysql/error.log
-slow_query_log = 1
-slow_query_log_file = /var/log/mysql/slow.log
-long_query_time = 2
-
-# Security
-local-infile = 0
+# Security: disable loading data from local files
+local-infile    = 0
 
 [mysql]
 default-character-set = utf8mb4
