--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
-user nginx;
+user www-data;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx/nginx.pid;
@@ -31,52 +31,6 @@ http {
 	ssl_session_cache shared:MozTLS:10m;
 	ssl_session_tickets off;
 
-	server {
-		listen 443 ssl;
-		listen [::]:443 ssl;
-
-		server_name ${DOMAIN_NAME};
-
-		# SSL Certificate Configuration
-		ssl_certificate /etc/nginx/ssl/inception.crt;
-		ssl_certificate_key /etc/nginx/ssl/inception.key;
-
-		# Document root
-		root /var/www/html;
-		index index.php index.html index.htm;
-
-		# Security headers
-		add_header Strict-Transport-Security "max-age=63072000" always;
-		add_header X-Frame-Options "SAMEORIGIN" always;
-		add_header X-Content-Type-Options "nosniff" always;
-		add_header X-XSS-Protection "1; mode=block" always;
-		add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
-		# Handle WordPress permalinks
-		location / {
-			try_files $uri $uri/ /index.php?$args;
-		}
-
-		# Pass PHP scripts to WordPress container
-		location ~ \.php$ {
-			try_files $uri =404;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass wordpress:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param PATH_INFO $fastcgi_path_info;
-		}
-
-		# Deny access to .htaccess files
-		location ~ /\.ht {
-			deny all;
-		}
-
-		# Handle static files efficiently
-		location ~* \.(css|gif|ico|jpeg|jpg|js|png)$ {
-			expires max;
-			log_not_found off;
-		}
-	}
+	# Include server blocks
+	include /etc/nginx/sites-enabled/*;
 }
