fix(mariadb): robustify bootstrap for container reuse and password auth
- Detect if root password is already set, passing it for all SQL bootstrapping
- Use $ROOT_AUTH for every mysql invocation, removing "Access denied" errors
- Eliminate duplicate mysql_install_db invocations
- Ensure reliable and idempotent first-run and restart behavior with persisted volumes
- Add inline comments to clarify each step

This resolves the recurring "Access denied for user 'root'@'localhost' (using password: NO)" when restarting
with a prepopulated data directory, and improves reliability for both initialisation and normal use.

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,11 +11,10 @@ services:
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: /run/secrets/db_password
     networks:
       - inception_network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p$(cat /run/secrets/db_root_password)"]
       interval: 10s
       timeout: 5s
       retries: 5
