--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   mariadb:
     build: ./requirements/mariadb
@@ -13,7 +12,7 @@ services:
     networks:
       - inception_network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p$(cat /run/secrets/db_root_password)"]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-p$(cat /run/secrets/db_root_password)" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -31,7 +30,7 @@ services:
       MYSQL_HOST: mariadb
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: $run/secrets/db_password
+      MYSQL_PASSWORD: /run/secrets/db_password
       DOMAIN_NAME: ${DOMAIN_NAME}
       WP_ADMIN_USER: ${WP_ADMIN_USER}
       WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
@@ -44,7 +43,7 @@ services:
       - inception_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pgrep php-fpm7.4 || exit 1"]
+      test: [ "CMD-SHELL", "pgrep php-fpm7.4 || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -71,6 +70,7 @@ networks:
 volumes:
   db_data:
   wp_data:
+
 
 secrets:
   db_password:
