add safety checks while building volumes, and change path were to store data

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   mariadb:
     build: ./requirements/mariadb
+    image: mariadb
     volumes:
       - db_data:/var/lib/mysql
     secrets:
@@ -12,7 +13,7 @@ services:
     networks:
       - inception_network
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-p$(cat /run/secrets/db_root_password)" ]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p$(cat /run/secrets/db_root_password)"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -20,6 +21,7 @@ services:
 
   wordpress:
     build: ./requirements/wordpress
+    image: wordpress
     volumes:
       - wp_data:/var/www/html
     secrets:
@@ -30,7 +32,7 @@ services:
       MYSQL_HOST: mariadb
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: /run/secrets/db_password
+      MYSQL_PASSWORD_FILE: /run/secrets/db_password
       DOMAIN_NAME: ${DOMAIN_NAME}
       WP_ADMIN_USER: ${WP_ADMIN_USER}
       WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
@@ -43,13 +45,14 @@ services:
       - inception_network
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD-SHELL", "pgrep php-fpm7.4 || exit 1" ]
+      test: ["CMD-SHELL", "pgrep php-fpm7.4 || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
 
   nginx:
     build: ./requirements/nginx
+    image: nginx
     volumes:
       - wp_data:/var/www/html
     ports:
@@ -69,8 +72,17 @@ networks:
 
 volumes:
   db_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ${HOME}/data/mariadb
+      o: bind
   wp_data:
-
+    driver: local
+    driver_opts:
+      type: none
+      device: ${HOME}/data/wordpress
+      o: bind
 
 secrets:
   db_password:
