simplify globally the project

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,43 @@
-# Domain Configuration
+# **************************************************************************** #
+#                                                                              #
+#                         INCEPTION PROJECT CONFIGURATION                      #
+#                                                                              #
+# **************************************************************************** #
+
+#------------------------------------------------------------------------------#
+#                            VOLUME PATHS (CRITICAL!)                         #
+#                   MUST use /home/login/data/ for 42 evaluation              #
+#------------------------------------------------------------------------------#
+
+# CRITICAL: These paths are checked during evaluation with 'docker volume inspect'
+WP_VOL_PATH=~/data/wordpress
+MDB_VOL_PATH=~/data/mariadb
+
+#------------------------------------------------------------------------------#
+#                           DOMAIN CONFIGURATION                               #
+#------------------------------------------------------------------------------#
+
 DOMAIN_NAME=meferraz.42.fr
 
-# MySQL/MariaDB Configuration
+#------------------------------------------------------------------------------#
+#                         MYSQL/MARIADB CONFIGURATION                          #
+#------------------------------------------------------------------------------#
+
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wp_user
 
-# WordPress Admin User Configuration
-WP_ADMIN_USER=meferraz_a-d-m-i-n
+#------------------------------------------------------------------------------#
+#                      WORDPRESS ADMIN USER CONFIGURATION                      #
+#                    (USERNAME MUST NOT CONTAIN 'admin')                       #
+#------------------------------------------------------------------------------#
+
+# Admin username cannot contain 'admin' - evaluation requirement
+WP_ADMIN_USER=meferraz_owner
 WP_ADMIN_EMAIL=meferraz@student.42porto.pt
 
-# WordPress Regular User Configuration
+#------------------------------------------------------------------------------#
+#                    WORDPRESS REGULAR USER CONFIGURATION                      #
+#------------------------------------------------------------------------------#
+
 WP_USER=wp_editor
 WP_USER_EMAIL=editor@meferraz.42.fr
