--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,95 +1,54 @@
 services:
-  mariadb:
-    build: ./requirements/mariadb
-    image: mariadb
+  nginx:
+    build:
+      context: ./requirements/nginx
+      args:
+        - DOMAIN_NAME=${DOMAIN_NAME}
+    container_name: nginx
+    ports:
+      - "443:443"
     volumes:
-      - db_data:/var/lib/mysql
-    secrets:
-      - db_password
-      - db_root_password
-    environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
+      - wp_data:/var/www/html
     networks:
-      - inception_network
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p$$(cat /run/secrets/db_root_password)"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - inception
+    depends_on:
+      - wordpress
     restart: unless-stopped
 
   wordpress:
     build: ./requirements/wordpress
-    image: wordpress
+    container_name: wordpress
     volumes:
       - wp_data:/var/www/html
-    secrets:
-      - db_password
-      - wp_admin_password
-      - wp_user_password
-    environment:
-      MYSQL_HOST: mariadb
-      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD_FILE: /run/secrets/db_password
-      DOMAIN_NAME: ${DOMAIN_NAME}
-      WP_ADMIN_USER: ${WP_ADMIN_USER}
-      WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
-      WP_USER: ${WP_USER}
-      WP_USER_EMAIL: ${WP_USER_EMAIL}
-    depends_on:
-      mariadb:
-        condition: service_healthy
     networks:
-      - inception_network
+      - inception
+    depends_on:
+      - mariadb
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pgrep php-fpm7.4 || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
-  nginx:
-    build: ./requirements/nginx
-    image: nginx
+  mariadb:
+    build: ./requirements/mariadb
+    container_name: mariadb
     volumes:
-      - wp_data:/var/www/html
-    ports:
-      - "443:443"
+      - mariadb_data:/var/lib/mysql
     networks:
-      - inception_network
-    depends_on:
-      wordpress:
-        condition: service_healthy
-    environment:
-      DOMAIN_NAME: ${DOMAIN_NAME}
+      - inception
     restart: unless-stopped
 
 networks:
-  inception_network:
+  inception:
     driver: bridge
 
 volumes:
-  db_data:
+  mariadb_data:
     driver: local
     driver_opts:
       type: none
-      device: ${HOME}/data/mariadb
+      device: ${MDB_VOL_PATH}
       o: bind
   wp_data:
     driver: local
     driver_opts:
       type: none
-      device: ${HOME}/data/wordpress
+      device: ${WP_VOL_PATH}
       o: bind
-
-secrets:
-  db_password:
-    file: ../secrets/db_password.txt
-  db_root_password:
-    file: ../secrets/db_root_password.txt
-  wp_admin_password:
-    file: ../secrets/wp_admin_password.txt
-  wp_user_password:
-    file: ../secrets/wp_user_password.txt
