--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,12 +6,11 @@ RUN apt-get update && apt-get install -y \
 	rm -rf /var/lib/apt/lists/*
 
 # Create necessary directories and set permissions
-RUN mkdir -p /run/mysqld /var/log/mysql /var/lib/mysql && \
-	chown -R mysql:mysql /run/mysqld /var/log/mysql /var/lib/mysql && \
-	chmod 750 /var/lib/mysql
+RUN mkdir -p /run/mysqld /var/lib/mysql && \
+	chown -R mysql:mysql /run/mysqld /var/lib/mysql
 
 # Copy custom MariaDB config
-COPY conf/my.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY conf/mariadb.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 # Copy startup script
 COPY tools/mariadb-start.sh /usr/local/bin/mariadb-start.sh
