--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,35 +1,10 @@
 [www]
-user = wordpress
-group = wordpress
+user = www-data
+group = www-data
 listen = 0.0.0.0:9000
-listen.owner = wordpress
-listen.group = wordpress
-listen.mode = 0660
 
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
-
-; Logging
-access.log = /var/log/php74-fpm.access.log
-php_admin_value[error_log] = /var/log/php74-fpm.error.log
-php_admin_flag[log_errors] = on
-
-; Security
-php_admin_value[disable_functions] = exec,passthru,shell_exec,system
-php_admin_flag[allow_url_fopen] = off
-
-; Session
-php_value[session.save_handler] = files
-php_value[session.save_path]    = /var/lib/php74/sessions
-
-; Other settings
-php_admin_value[memory_limit] = 256M
-php_admin_value[max_execution_time] = 300
-php_admin_value[max_input_vars] = 3000
-php_admin_value[post_max_size] = 64M
-php_admin_value[upload_max_filesize] = 64M
-
-clear_env = no
