--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,36 +1,27 @@
-user www-data;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx/nginx.pid;
-
 events {
 	worker_connections 1024;
 }
 
 http {
-	include       /etc/nginx/mime.types;
-	default_type  application/octet-stream;
+	server {
+		listen 443 ssl;
+		server_name $DOMAIN_NAME;
 
-	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-					'$status $body_bytes_sent "$http_referer" '
-					'"$http_user_agent" "$http_x_forwarded_for"';
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		ssl_protocols TLSv1.2 TLSv1.3;
 
-	access_log /var/log/nginx/access.log main;
+		root /var/www/html;
+		index index.php;
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
+		location / {
+			try_files $uri $uri/ /index.php?$args;
+		}
 
-	# SSL Configuration
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_prefer_server_ciphers off;
-	ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-	ssl_session_timeout 1d;
-	ssl_session_cache shared:MozTLS:10m;
-	ssl_session_tickets off;
-
-	# Include server blocks
-	include /etc/nginx/sites-enabled/*;
+		location ~ \.php$ {
+			fastcgi_pass wordpress:9000;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		}
+	}
 }
