mariadb pasword issu

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,7 +3,8 @@ FROM debian:bullseye
 RUN apt update && apt install -y nginx openssl
 RUN mkdir -p /etc/nginx/ssl
 
-COPY conf/nginx.conf /etc/nginx/templates/default.conf.template
+# Copia o nginx.conf para o local padrão do Nginx
+COPY conf/nginx.conf /etc/nginx/nginx.conf
 COPY tools/nginx-entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
