--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,11 +5,16 @@ events {
 http {
 	server {
 		listen 443 ssl;
-		server_name $DOMAIN_NAME;
+		server_name ${DOMAIN_NAME};
 
 		ssl_certificate /etc/nginx/ssl/inception.crt;
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_prefer_server_ciphers off;
+		ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+		ssl_session_timeout 1d;
+		ssl_session_cache shared:MozTLS:10m;
+		ssl_session_tickets off;
 
 		root /var/www/html;
 		index index.php;
