--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,54 +1,86 @@
 services:
-  nginx:
-    build:
-      context: ./requirements/nginx
-      args:
-        - DOMAIN_NAME=${DOMAIN_NAME}
-    container_name: nginx
-    ports:
-      - "443:443"
+  mariadb:
+    build: ./requirements/mariadb
+    image: mariadb
+    container_name: mariadb
     volumes:
-      - wp_data:/var/www/html
+      - db_data:/var/lib/mysql
+      - ../secrets/db_password.txt:/run/secrets/db_password
+      - ../secrets/db_root_password.txt:/run/secrets/db_root_password
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
     networks:
-      - inception
-    depends_on:
-      - wordpress
+      - inception_network
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p$$(cat /run/secrets/db_root_password)"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
   wordpress:
     build: ./requirements/wordpress
+    image: wordpress
     container_name: wordpress
     volumes:
       - wp_data:/var/www/html
-    networks:
-      - inception
+      - ../secrets/db_password.txt:/run/secrets/db_password
+      - ../secrets/wp_admin_password.txt:/run/secrets/wp_admin_password
+      - ../secrets/wp_user_password.txt:/run/secrets/wp_user_password
+    environment:
+      MYSQL_HOST: mariadb
+      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD_FILE: /run/secrets/db_password
+      DOMAIN_NAME: ${DOMAIN_NAME}
+      WP_ADMIN_USER: ${WP_ADMIN_USER}
+      WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
+      WP_USER: ${WP_USER}
+      WP_USER_EMAIL: ${WP_USER_EMAIL}
     depends_on:
-      - mariadb
-    restart: unless-stopped
-
-  mariadb:
-    build: ./requirements/mariadb
-    container_name: mariadb
-    volumes:
-      - mariadb_data:/var/lib/mysql
+      mariadb:
+        condition: service_healthy
     networks:
-      - inception
+      - inception_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep php-fpm7.4 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  nginx:
+    build: ./requirements/nginx
+    image: nginx
+    container_name: nginx
+    volumes:
+      - wp_data:/var/www/html
+    ports:
+      - "443:443"
+    networks:
+      - inception_network
+    depends_on:
+      wordpress:
+        condition: service_healthy
+    environment:
+      DOMAIN_NAME: ${DOMAIN_NAME}
     restart: unless-stopped
 
 networks:
-  inception:
+  inception_network:
     driver: bridge
 
 volumes:
-  mariadb_data:
+  db_data:
     driver: local
     driver_opts:
       type: none
-      device: ${MDB_VOL_PATH}
+      device: ${HOME}/data/mariadb
       o: bind
   wp_data:
     driver: local
     driver_opts:
       type: none
-      device: ${WP_VOL_PATH}
+      device: ${HOME}/data/wordpress
       o: bind
