restart from scratch the project

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,43 +1,12 @@
-# **************************************************************************** #
-#                                                                              #
-#                         INCEPTION PROJECT CONFIGURATION                      #
-#                                                                              #
-# **************************************************************************** #
+# Domain & general
+DOMAIN=meferraz.42.fr
 
-#------------------------------------------------------------------------------#
-#                            VOLUME PATHS (CRITICAL!)                         #
-#                   MUST use /home/login/data/ for 42 evaluation              #
-#------------------------------------------------------------------------------#
-
-# CRITICAL: These paths are checked during evaluation with 'docker volume inspect'
-WP_VOL_PATH=~/data/wordpress
-MDB_VOL_PATH=~/data/mariadb
-
-#------------------------------------------------------------------------------#
-#                           DOMAIN CONFIGURATION                               #
-#------------------------------------------------------------------------------#
-
-DOMAIN_NAME=meferraz.42.fr
-
-#------------------------------------------------------------------------------#
-#                         MYSQL/MARIADB CONFIGURATION                          #
-#------------------------------------------------------------------------------#
-
+# Database (only names, no passwords)
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wp_user
 
-#------------------------------------------------------------------------------#
-#                      WORDPRESS ADMIN USER CONFIGURATION                      #
-#                    (USERNAME MUST NOT CONTAIN 'admin')                       #
-#------------------------------------------------------------------------------#
-
-# Admin username cannot contain 'admin' - evaluation requirement
+# Wordpress users (admin username must NOT contain 'admin')
 WP_ADMIN_USER=meferraz_owner
 WP_ADMIN_EMAIL=meferraz@student.42porto.pt
-
-#------------------------------------------------------------------------------#
-#                    WORDPRESS REGULAR USER CONFIGURATION                      #
-#------------------------------------------------------------------------------#
-
 WP_USER=wp_editor
 WP_USER_EMAIL=editor@meferraz.42.fr
