--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,84 +3,69 @@ services:
     build: ./requirements/mariadb
     image: mariadb
     container_name: mariadb
-    volumes:
-      - db_data:/var/lib/mysql
-      - ../secrets/db_password.txt:/run/secrets/db_password
-      - ../secrets/db_root_password.txt:/run/secrets/db_root_password
-    environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-    networks:
-      - inception_network
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p$$(cat /run/secrets/db_root_password)"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    env_file: ./.env
     restart: unless-stopped
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    networks:
+      - inception
+    secrets:
+      - db_password
 
   wordpress:
     build: ./requirements/wordpress
     image: wordpress
     container_name: wordpress
-    volumes:
-      - wp_data:/var/www/html
-      - ../secrets/db_password.txt:/run/secrets/db_password
-      - ../secrets/wp_admin_password.txt:/run/secrets/wp_admin_password
-      - ../secrets/wp_user_password.txt:/run/secrets/wp_user_password
-    environment:
-      MYSQL_HOST: mariadb
-      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD_FILE: /run/secrets/db_password
-      DOMAIN_NAME: ${DOMAIN_NAME}
-      WP_ADMIN_USER: ${WP_ADMIN_USER}
-      WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
-      WP_USER: ${WP_USER}
-      WP_USER_EMAIL: ${WP_USER_EMAIL}
-    depends_on:
-      mariadb:
-        condition: service_healthy
-    networks:
-      - inception_network
+    env_file: ./.env
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pgrep php-fpm7.4 || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    depends_on:
+      - mariadb
+    volumes:
+      - wordpress_data:/var/www/html
+    networks:
+      - inception
+    expose:
+      - "9000"
+    secrets:
+      - db_password
+      - wp_admin_password
+      - wp_user_password
 
   nginx:
     build: ./requirements/nginx
     image: nginx
     container_name: nginx
-    volumes:
-      - wp_data:/var/www/html
+    env_file: ./.env
+    restart: unless-stopped
+    depends_on:
+      - wordpress
     ports:
       - "443:443"
+    volumes:
+      - wordpress_data:/var/www/html
     networks:
-      - inception_network
-    depends_on:
-      wordpress:
-        condition: service_healthy
-    environment:
-      DOMAIN_NAME: ${DOMAIN_NAME}
-    restart: unless-stopped
+      - inception
 
-networks:
-  inception_network:
-    driver: bridge
+secrets:
+  db_password:
+    file: ./secrets/db_password.txt
+  wp_admin_password:
+    file: ./secrets/wp_admin_password.txt
+  wp_user_password:
+    file: ./secrets/wp_user_password.txt
 
 volumes:
-  db_data:
-    driver: local
+  wordpress_data:
     driver_opts:
-      type: none
-      device: ${HOME}/data/mariadb
       o: bind
-  wp_data:
-    driver: local
-    driver_opts:
-      type: none
       device: ${HOME}/data/wordpress
+      type: none
+  mariadb_data:
+    driver_opts:
       o: bind
+      device: ${HOME}/data/mariadb
+      type: none
+
+networks:
+  inception:
+    driver: bridge
