--- a/srcs/requirements/mariadb/conf/mariadb.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb.cnf
@@ -1,9 +1,10 @@
 [mysqld]
-bind-address    = 0.0.0.0
-datadir         = /var/lib/mysql
-character-set-server = utf8mb4
-collation-server     = utf8mb4_general_ci
-log-error       = /var/log/mysql/error.log
+bind-address            = 0.0.0.0
+datadir                 = /var/lib/mysql
+character-set-server    = utf8mb4
+collation-server        = utf8mb4_general_ci
+log-error               = /var/log/mysql/error.log
+lower_case_table_names  = 2
 
 [mysql]
-default-character-set = utf8mb4
+default-character-set   = utf8mb4
