--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,12 +1,10 @@
 FROM debian:bullseye
 
-RUN apt update && apt install -y nginx openssl
-RUN mkdir -p /etc/nginx/ssl
+RUN apt-get update && apt-get install -y nginx openssl && rm -rf /var/lib/apt/lists/*
 
-# Copia o nginx.conf para o local padrão do Nginx
 COPY conf/nginx.conf /etc/nginx/nginx.conf
-COPY tools/nginx-entrypoint.sh /entrypoint.sh
+COPY tools/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 443
+CMD ["/entrypoint.sh"]
