--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,32 +1,32 @@
-events {
-	worker_connections 1024;
-}
+user www-data;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
+
+events { worker_connections 1024; }
 
 http {
-	server {
-		listen 443 ssl;
-		server_name ${DOMAIN_NAME};
+include /etc/nginx/mime.types;
+default_type application/octet-stream;
 
-		ssl_certificate /etc/nginx/ssl/inception.crt;
-		ssl_certificate_key /etc/nginx/ssl/inception.key;
-		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_prefer_server_ciphers off;
-		ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-		ssl_session_timeout 1d;
-		ssl_session_cache shared:MozTLS:10m;
-		ssl_session_tickets off;
+server {
+	listen 443 ssl default_server;
+	listen [::]:443 ssl default_server;
 
-		root /var/www/html;
-		index index.php;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+	ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 
-		location / {
-			try_files $uri $uri/ /index.php?$args;
-		}
+	root /var/www/html;
+	index index.php index.html index.htm;
 
-		location ~ \.php$ {
-			fastcgi_pass wordpress:9000;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		}
+	location / {
+	try_files $uri $uri/ =404;
 	}
+
+	location ~ \.php$ {
+	include snippets/fastcgi-php.conf;
+	fastcgi_pass wordpress:9000;
+	}
+}
 }
